--- a/index.html
+++ b/index.html
@@ -8,12 +8,17 @@
   <script src="./main.js" type="module"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap" rel="stylesheet">
-  <title>Cat Search</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">  <title>Cat Search</title>
 </head>
 
 <body>
-  <main id="App"></main>
+  <main id="App">
+    <header class="header">
+      <a href="/"><img src="/assets/cat.png"></a>
+    </header>
+  </main>
 </body>
 
 </html>
