--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="icon" href="/assets/cat.png">
   <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">  <title>Cat Search</title>
 </head>
 
