--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="icon" href="/assets/cat.png">
+  <script src="https://kit.fontawesome.com/1efd1db774.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">  <title>Cat Search</title>
 </head>
 
