--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <link rel="stylesheet" href="src/style.css" />
-  <script src="./main.js" type="module"></script>
+  <link rel="stylesheet" href="src/style/style.css" />
+  <script src="src/main.js" type="module"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link rel="icon" href="/assets/cat.png">
+  <link rel="icon" href="/src/assets/cat.png">
   <script src="https://kit.fontawesome.com/1efd1db774.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css2?family=Stylish&display=swap" rel="stylesheet">  <title>Cat Search</title>
 </head>
